# camera-stream-app

./: .gitignore  .mcp.json  README.md  build.gradle.kts  build.sh  gradle.properties  gradlew  proguard-rules.pro  settings.gradle.kts
.github/workflows/: build-apk.yml  ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/androidTest/java/tech/estacionkus/camerastream/: HomeScreenTest.kt
app/src/androidTest/java/tech/estacionkus/camerastream/: HiltTestRunner.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  srt_jni.cpp
app/src/main/java/com/cushMedia/camerastream/: MainActivity.kt
app/src/main/java/com/cushMedia/camerastream/model/: StreamSettings.kt
app/src/main/java/com/cushMedia/camerastream/streaming/: RTMPOutput.kt  SRTOutput.kt  StreamManager.kt
app/src/main/java/com/cushMedia/camerastream/viewmodel/: SettingsViewModel.kt  StreamViewModel.kt
app/src/main/java/tech/estacionkus/camerastream/: CameraStreamApp.kt  MainActivity.kt
app/src/main/java/tech/estacionkus/camerastream/billing/: BillingManager.kt  StripeManager.kt
app/src/main/java/tech/estacionkus/camerastream/di/: AppModule.kt  ProModule.kt
app/src/main/java/tech/estacionkus/camerastream/domain/: FeatureGate.kt  SceneManager.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/tech/estacionkus/camerastream/: FeatureGateTest.kt  SceneManagerTest.kt  SportsModeManagerTest.kt  SrtCallerManagerTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.jar.b64
(+101 files in other folders)
